# mo-net

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  flake.nix  justfile  main.py  pyproject.toml
.agents/skills/herakles-deploy/: SKILL.md
.github/workflows/: ci.yml
mnist_numpy/: __main__.py  augment.py  cli.py  config.py  data.py  db.py  functional.py  functions.py  main.py  model.py  protocols.py  protos.py  quickstart.py  tests.py  train.py  transform.py  types.py
mnist_numpy/model/: __init__.py  base.py  layer.py  mlp.py  model.py  scheduler.py
mnist_numpy/model/block/: __init__.py  base.py  batch_norm.py  convolution.py  dense.py  norm.py
mnist_numpy/model/layer/: __init__.py  activation.py  base.py  batch_norm.py  convolution.py  dense.py  dropout.py  input.py  layer_norm.py  linear.py  output.py  pool.py  reshape.py
mnist_numpy/monitor/: exceptions.py  monitor.py
mnist_numpy/optimizer/: __init__.py  adalm.py  adam.py  base.py  scheduler.py
mnist_numpy/regulariser/: batch_norm.py  dropout.py  ridge.py  weight_decay.py
mnist_numpy/scripts/: augment_data.py  inspect_params.py  plot_loss.py  serve_plot.py  term_plot.py  trace_statistics.py  transform.py
mnist_numpy/server/: __main__.py  app.py
mnist_numpy/server/static/: styles.css
mnist_numpy/server/static/css/: dashboard.css
mnist_numpy/server/templates/: base.html  dashboard.html  manage.html
mnist_numpy/templates/: base.html  dashboard.html
mnist_numpy/templates/css/: styles.html
mnist_numpy/tests/model/: test_model.py
mnist_numpy/tests/model/layer/: test_activation.py  test_convolution.py  test_dropout.py  test_linear.py  test_pool.py  test_reshape.py
mnist_numpy/train/: __init__.py  batcher.py  context.py  exceptions.py  monitor.py  run.py  tracer.py
mnist_numpy/train/backends/: logging.py  models.py
mnist_numpy/train/server/: backends.py  models.py
mnist_numpy/train/trainer/: batch.py  parallel.py  trainer.py
mnist_numpy/trainer/: __init__.py  context.py  exceptions.py  monitor.py  tracer.py  trainer.py
mo_net/: __init__.py  __main__.py  archive.py  cli.py  config.py  constants.py  data.py  db.py  device.py  functional.py  functions.py  log.py  logging.py  protos.py  quickstart.py  resources.py  settings.py
mo_net/data_structures/: huffman_tree.py
mo_net/model/: __init__.py  base.py  model.py
mo_net/model/block/: base.py  convolution.py  dense.py  norm.py
mo_net/model/layer/: __init__.py  activation.py  average.py  base.py  batch_norm.py  convolution.py  dropout.py  embedding.py  input.py  layer_norm.py  linear.py  output.py  pool.py  recurrent.py  reshape.py
mo_net/model/layer/batch_norm/: __init__.py  batch_norm.py  batch_norm_2d.py
mo_net/model/module/: __init__.py  base.py  convolution.py  dense.py  norm.py  rnn.py
mo_net/optimiser/: adam.py  base.py  rmsprop.py  scheduler.py
mo_net/optimizer/: __init__.py  adam.py  base.py  rmsprop.py
mo_net/regulariser/: l1_regulariser.py  weight_decay.py
mo_net/samples/: cbow.py  cnn.py  mnist.py
mo_net/samples/mnist/: __init__.py  __main__.py  cnn.py  features.py  mlp.py  mlp_decoder.py
mo_net/samples/rnn_language/: __init__.py  __main__.py
mo_net/samples/sequence/: simple_rnn.py
mo_net/samples/word2vec/: __init__.py  __main__.py  analogy.py  archive.py  eval.py  health.py  models.py  prepared.py  softmax_strategy.py  vocab.py
mo_net/samples/word2vec/cli/: __init__.py  group.py  inspect.py  train.py
mo_net/samples/word2vec/strategy/: softmax.py
mo_net/scripts/: build_w2v_dataset.py  cbow.py  check_device.py  corpus_stats.py  extract_features.py  prewarm.py  term_plot.py  trace_statistics.py  typecheck.py  validation.py
mo_net/server/: __main__.py  app.py
mo_net/server/static/: styles.css
mo_net/server/templates/: base.html  dashboard.html  manage.html
mo_net/tests/: test_resources.py  test_settings.py
mo_net/tests/archive/: test_archive.py
mo_net/tests/backends/: test_log.py
mo_net/tests/data_structures/: test_huffman_tree.py
mo_net/tests/model/: test_model.py
mo_net/tests/model/layer/: test_activation.py  test_average.py  test_batch_norm.py  test_convolution.py  test_dropout.py  test_embedding.py  test_hierarchical_output.py  test_linear.py  test_output.py  test_pool.py  test_recurrent.py  test_reshape.py
mo_net/tests/samples/word2vec/: test_health.py  test_hierarchical_integration.py  test_integration.py  test_models.py  test_negative_sampling.py  test_prepared.py  test_softmax_strategy.py  test_vocab.py
mo_net/tests/samples/word2vec/strategy/: test_softmax.py
mo_net/tests/scripts/: test_build_w2v_dataset.py
mo_net/tests/smoke/: __init__.py  test_mnist_cnn.py  test_mnist_mlp.py
mo_net/tests/train/: test_metric_providers.py
mo_net/tests/trainer/: test_parallel.py
mo_net/train/: augment.py  batcher.py  iterator.py  monitor.py  run.py  tracer.py
mo_net/train/backends/: log.py  logging.py  models.py
mo_net/train/trainer/: parallel.py  trainer.py
mypy_plugins/: __init__.py  d.py
notebooks/: corpus_analysis.py  eigenvalue_decomposition.ipynb  embedding_explorer.py  mnist_pixel_entropy.ipynb  unpacking_experiment.ipynb  vectorized_convolution.ipynb
notes/: 2025-03-16.md  2025-06-14.md  herakles-enroot-config-handoff.md  word2vec.md
scripts/: migrate_v2.py
