[project]
authors = [{ name = "Moye", email = "moyeodiase@outlook.com" }]

name = "mnist-numpy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
  "numpy<3.0.0,>=2.2.3",
  "more-itertools<11.0.0,>=10.6.0",
  "pandas<3.0.0,>=2.2.3",
  "matplotlib<4.0.0,>=3.10.1",
  "tqdm<5.0.0,>=4.67.1",
  "click<9.0.0,>=8.1.8",
  "loguru<1.0.0,>=0.7.3",
  "mypy>=1.15.0",
  "networkx>=3.4.2",
  "taplo>=0.9.3",
  "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "ruff<1.0.0,>=0.9.7",
    "taskipy>=1.14.1",
    "types-tqdm>=4.67.0.20250301",
]

[uv.tool]
default-groups = []


[tool.setuptools]
packages = ["mnist_numpy"]

[tool.taskipy.tasks]
format = "fd -e py -x uv run ruff format"
typecheck = "fd -e py -x uv run mypy"


[project.scripts]
infer = "mnist_numpy.cli:infer"
inspect_params = "mnist_numpy.scripts.inspect_params:main"
plot_loss = "mnist_numpy.scripts.plot_loss:main"
resume = "mnist_numpy.cli:resume"
sample_data = "mnist_numpy.cli:sample_data"
train = "mnist_numpy.cli:train"
