[build-system]
requires = ["flit_core >=3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Moye", email = "moyeodiase@outlook.com" }]
name = "mo_net"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
  "numpy<3.0.0,>=2.2.3",
  "more-itertools<11.0.0,>=10.6.0",
  "pandas<3.0.0,>=2.2.3",
  "matplotlib<4.0.0,>=3.10.1",
  "tqdm<5.0.0,>=4.67.1",
  "click<9.0.0,>=8.1.8",
  "loguru<1.0.0,>=0.7.3",
  "mypy>=1.15.0",
  "networkx>=3.4.2",
  "taplo>=0.9.3",
  "pydantic>=2.11.1",
  "h5py>=3.13.0",
  "plotille>=5.0.0",
  "scipy>=1.15.3",
  "flameprof>=0.4",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  "sqlalchemy>=2.0.41",
  "tabulate>=0.9.0",
  "jaxlib>=0.6.2",
  "jax>=0.6.2",
]

[dependency-groups]
cuda = [
    "jax[cuda12]>=0.6.2",
]
dev = [
  "inquirerpy>=0.3.4",
  "jupyter>=1.1.1",
  "line-profiler>=4.2.0",
  "pandas-stubs>=2.2.3.250308",
  "pytest>=8.3.5",
  "ruff<1.0.0,>=0.9.7",
  "taskipy>=1.14.1",
  "types-tabulate>=0.9.0.20241207",
  "types-tqdm>=4.67.0.20250301",
]
mps = [
    "jax-metal>=0.1.1",
]

[uv.tool]
default-groups = []

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "mypy_plugins.d"]

[[tool.mypy.overrides]]
module = "h5py"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotille"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true

[tool.setuptools]
packages = ["mo_net"]

[tool.taskipy.tasks]
format = "uv run taplo format pyproject.toml; fd -e py -x uv run ruff format"
test = "pytest mo_net/tests"
typecheck-all = "fd -e py -x uv run mypy"
typecheck = "fd -e py -x uv run mypy | rg -v 'no issues' | head -10"


[project.scripts]
check_device = "mo_net.scripts.check_device:main"
cross_validate = "mo_net.scripts.validation:main"
infer = "mo_net.cli:infer"
resume = "mo_net.cli:resume"
sample_data = "mo_net.cli:sample_data"
serve = "mo_net.server.__main__:main"
term_plot = "mo_net.scripts.term_plot:main"
trace_statistics = "mo_net.scripts.trace_statistics:main"
train = "mo_net.cli:cli_train"
