[build-system]
requires = ["flit_core >=3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Moye", email = "moyeodiase@outlook.com" }]
name = "mo_net"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "numpy<3.0.0,>=2.2.3",
  "more-itertools<11.0.0,>=10.6.0",
  "pandas<3.0.0,>=2.2.3",
  "tqdm<5.0.0,>=4.67.1",
  "click<9.0.0,>=8.1.8",
  "loguru<1.0.0,>=0.7.3",
  "pydantic>=2.11.1",
  "pydantic-settings>=2.0",
  "sqlalchemy>=2.0.41",
  "inquirerpy>=0.3.4",
  "msgpack>=1.1.1",
  "jax>=0.6.2",
  "jaxlib>=0.6.2",
  "requests>=2.32.0",
  "datasets>=3.0.0",
  "huggingface-hub>=0.26.0",
]

[dependency-groups]
cuda = ["jax[cuda12]>=0.6.2", "jax-cuda12-plugin>=0.6.2"]
mariadb = ["pymysql>=1.1.0"]
postgres = ["psycopg[binary]>=3.2.0"]
trace = ["h5py>=3.13.0"]
dev = [
  # tooling
  "mypy>=1.15.0",
  "taplo>=0.9.3",
  "flameprof>=0.4",
  "pyright>=1.1.407",
  "pytest>=8.3.5",
  "pytest-xdist>=3.5.0",
  "ruff<1.0.0,>=0.9.7",
  "line-profiler>=4.2.0",
  "pandas-stubs>=2.2.3.250308",
  "types-tabulate>=0.9.0.20241207",
  "types-tqdm>=4.67.0.20250301",
  # server (mo_net.server)
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  # plotting (samples + scripts)
  "matplotlib<4.0.0,>=3.10.1",
  "plotly>=6.3.0",
  "plotille>=5.0.0",
  # scripts
  "tabulate>=0.9.0",
  # notebooks
  "jupyter>=1.1.1",
  "marimo>=0.10.0",
  # trace analysis (also kept here so trace_statistics.py works in dev shells)
  "h5py>=3.13.0",
]

[uv.tool]
default-groups = []

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "mypy_plugins.d"]

[[tool.mypy.overrides]]
module = "h5py"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotille"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.graph_objects"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.subplots"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub"
ignore_missing_imports = true

[tool.setuptools]
packages = ["mo_net"]

[project.scripts]
check_device = "mo_net.scripts.check_device:main"
cross_validate = "mo_net.scripts.validation:main"
infer = "mo_net.cli:infer"
mo-net-build-w2v-dataset = "mo_net.scripts.build_w2v_dataset:main"
mo-net-prewarm = "mo_net.scripts.prewarm:main"
resume = "mo_net.cli:resume"
sample_data = "mo_net.cli:sample_data"
serve = "mo_net.server.__main__:main"
term_plot = "mo_net.scripts.term_plot:main"
trace_statistics = "mo_net.scripts.trace_statistics:main"
train = "mo_net.cli:cli_train"
